# SerialPortDemo

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  run_build.sh  run_build_cross.sh  toolchain.cmake
3rd/serial/: CMakeLists.txt
serial_port/: CMakeLists.txt
serial_port/3rd/serial/: CMakeLists.txt
serial_port/include/serialport/: serialport.h
serial_port/src/: serialport.cpp
